--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="/dist/bundle.js"></script>
+<script src="/bundle.js"></script>
 <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
 </body>
 </html>
